--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,11 +2,13 @@
 $color-primary: #22252e;
 $color-secondary: #6b728e;
 
+$color-background-secondary: #f9fafe;
+
 $color-button-blue: #317ade;
 
 $color_black: #000;
 $color_white: #fff;
-$color_lightgrey: #f5f5f5;
+//$color_lightgrey: #f5f5f5;
 
 //Font
 $default-font-size: 1rem;
