--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,1 +1,11 @@
+.campanies{
+    width: 100%;
+    margin-top: 100px;
+    padding: 0 $padding-right 0 $padding-left;
+}
 
+.about{
+    width: 100%;
+    margin-top: 60px;
+    padding: 0 $padding-right 0 $padding-left;
+}
