--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,8 +6,8 @@ $color-background-secondary: #f9fafe;
 
 $color-button-blue: #317ade;
 
-$color_black: #000;
-$color_white: #fff;
+$color-black: #000;
+$color-white: #fff;
 //$color_lightgrey: #f5f5f5;
 
 //Font
@@ -23,3 +23,7 @@ $font-weight-bolder: 900;
 //add font-family
 $font-family-primary: futura-pt, "Arial Condensed", sans-serif;
 $font-family-secondary: lust, "Courier", serif;
+
+//
+$padding-left: 16px;
+$padding-right: 16px;
