--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,8 +1,67 @@
 body {
-  font-size: 22px;
+  font-size: 16px;
+  @include font-primary-demi;
+
+  .title-secondary {
+    // @include font-secondary-italic;
+    font-family: 'Kurale', serif;
+    font-style: italic;
+    font-size: 48px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: italic;
+    line-height: 1.25;
+    letter-spacing: normal;   
+  }
 }
 
 .header {
-  //
+  color: $color-white;
+
+  .hero {
+    width: 100%;
+    height: 100%;
+
+    &__title {
+      @include font-primary-bold;
+      font-size: 48px;
+      font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.25;
+      letter-spacing: -1px;
+    }
+
+    &__text {
+      margin: 32px 0;
+      opacity: 0.5;
+      font-size: 20px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.6;
+      letter-spacing: normal;
+    }
+
+    .button__header {
+      font-size: 24px;
+      font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: -0.47px;
+
+      &--quote {
+        color: $color-primary;
+      }
+
+      &--life {
+        color: $color-white;
+      }
+    }
+  }
 }
 
+.about {
+  
+}
