--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,17 +1,34 @@
 .navigation {
+ 
+ flex: 0 1 30%;
+ height: 40px;
+ margin-top: 45px;
+
+  .sidebar {
+    display: none;
+  }
+
+  &__button{
+    height: 35px;    
+    
+    display: flex;
+    justify-content: center;
+  }
+
   &__icon {
+    
     position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    
     &,
     &::before,
     &::after {
       display: inline-block;
-      width: 3rem;
-      height: 2px;
-      background-color: grey;
+      width: 24px;
+      height: 3px;
+      background-color: $color-white;
     }
 
     &::before,
@@ -37,19 +54,5 @@
   }
   &__button:hover &__icon::after {
     top: 1rem;
-  }
-
-  &__checkbox:checked + &__button &__icon {
-    background-color: transparent;
-
-    &::before {
-      top: 0;
-      transform: rotate(135deg);
-    }
-
-    &::after {
-      top: 0;
-      transform: rotate(-135deg);
-    }
   }
 }
