--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,14 +1,22 @@
 //colors
-$color-primary: #22252e;
-$color-secondary: #6b728e;
+$color-primary: rgb(34,37,46);//#22252e;
+$color-primary-text: rgba(34,37,46,.8);
+$color-secondary-text: #6b728e;
+$color-secondary-text-light: rgb(107, 114, 142); //#6b728e
+
 
 $color-background-secondary: #f9fafe;
 
-$color-button-blue: #317ade;
+$color-blue: #317ade;
+$color-red: #ed701d;
+$color-green: #1ebf73;
 
 $color-black: #000;
 $color-white: #fff;
-//$color_lightgrey: #f5f5f5;
+$color_lightgrey: #f5f5f5;
+$color-grey-dark-1: #999;
+$color-grey-dark-2: #777;
+$color-grey-dark-3: #333;
 
 //Font
 $default-font-size: 1rem;
