--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@ li {
   box-sizing: border-box;
 }
 
+main {
+  padding: 0 16px 0 16px;
+}
+
 li {
   list-style-type: none;
 }
@@ -56,13 +60,16 @@ li {
 
 .title-secondary {
   font-family: "Kurale", serif;
-  font-family: "Alexander", serif;
   font-style: italic;
   font-size: 48px;
   font-weight: bolder;
   font-style: italic;
   line-height: 1.25;
-  color: rgb(34, 37, 46);
+  color: #22252e;
+}
+
+.heading-title {
+  color: #22252e;
 }
 
 .button {
@@ -82,39 +89,34 @@ li {
   font-style: normal;
   font-size: 48px;
   font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.25;
   letter-spacing: -1px;
 }
 .header .hero__text {
   margin: 32px 0;
-  opacity: 0.5;
+  color: rgba(255, 255, 255, 0.5);
   font-size: 20px;
-  font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
   line-height: 1.6;
-  letter-spacing: normal;
 }
 .header .hero .button__header {
   font-size: 24px;
   font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: -0.47px;
 }
 .header .hero .button__header--quote {
-  color: rgb(34, 37, 46);
+  color: #22252e;
 }
 .header .hero .button__header--life {
   color: #fff;
 }
 
+.services__paragraph-text-light {
+  color: rgba(107, 114, 142, 0.8);
+  font-weight: 500;
+}
 .services .card__heading-subtitle-span {
   font-size: 20px;
-  font-weight: bold;
+  font-weight: bolder;
 }
 .services .card__heading-subtitle-span--blue {
   color: #317ade;
@@ -127,25 +129,82 @@ li {
 }
 .services .card__heading-title {
   font-size: 32px;
-  font-weight: bold;
+  font-weight: bolder;
+  color: #22252e;
 }
 
 .blog__card-title {
   font-size: 28px;
   font-weight: bolder;
 }
+.blog__card-title--first {
+  word-break: break-word;
+  white-space: pre-line;
+}
 .blog__card-link {
   font-weight: bolder;
   text-decoration: underline;
   line-height: 1.38;
+  color: #22252e;
 }
 
 .testimonials__text {
-  color: #999;
+  color: rgba(255, 255, 255, 0.5);
 }
 
-.hire-us .trustedby__heading-subtitle {
+.hire-us .trustedby__heading-title {
+  font-family: futura-pt, "Arial Condensed", sans-serif;
+  font-weight: 600;
+  font-style: normal;
   text-transform: uppercase;
+}
+
+.positions__title-secondary {
+  margin-bottom: 50px;
+  padding-top: 131px;
+}
+.positions__heading-title {
+  font-size: 28px;
+  margin-bottom: 16px;
+}
+.positions__text-content {
+  font-size: 18px;
+  margin-bottom: 24px;
+  color: rgba(107, 114, 142, 0.8);
+}
+.positions .button__blue--arrow {
+  font-size: 20px;
+}
+.positions .button__blue--black {
+  font-size: 20px;
+  color: #f8f8f8;
+}
+
+.experience {
+  color: #fff;
+}
+.experience__title-secondary {
+  color: #f9fafe;
+  margin-bottom: 50px;
+}
+
+.info__info-link {
+  font-size: 40px;
+}
+
+.footer__heading-title {
+  color: #fff;
+  font-size: 20px;
+}
+.footer p,
+.footer a,
+.footer ul,
+.footer li, .footer span {
+  color: rgba(255, 255, 255, 0.5);
+}
+.footer i {
+  font-size: 24px;
+  color: #fff;
 }
 
 .button {
@@ -162,8 +221,71 @@ li {
 }
 
 .footer {
-  background-color: #000;
-  color: #fff;
+  width: 100%;
+  height: 1167px;
+}
+.footer__container {
+  width: 100%;
+  padding: 50px 16px 0 16px;
+  width: 100%;
+  margin-top: 100px;
+  background-color: #1a1a1a;
+}
+.footer__logo-box {
+  width: 100%;
+  margin-bottom: 50px;
+}
+.footer__logo-box img {
+  height: 35px;
+}
+.footer__text-box {
+  margin-bottom: 48px;
+}
+.footer__social {
+  width: 100%;
+}
+.footer__list-social {
+  width: 100%;
+  margin-bottom: 50px;
+  border: 1px solid red;
+  display: inline-flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+}
+.footer__list-item {
+  width: 56px;
+  height: 56px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.15);
+}
+.footer__link-social {
+  width: inherit;
+  height: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer__heading-title {
+  margin-bottom: 24px;
+}
+.footer__navigation, .footer__contact {
+  margin-bottom: 50px;
+}
+.footer__navigation-list, .footer__contact-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.footer__bottom {
+  width: 100%;
+  height: 80px;
+  text-align: center;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header {
@@ -174,7 +296,7 @@ li {
   width: 100%;
   height: inherit;
   padding: 0 16px 0 16px;
-  background-color: #000;
+  background-color: #1a1a1a;
   display: flex;
   flex-wrap: wrap;
 }
@@ -209,7 +331,7 @@ li {
   background-color: #fff;
 }
 .header .hero .button__header--life {
-  background-color: grey;
+  background-color: rgba(255, 255, 255, 0.15);
 }
 .header .hero__img-box img {
   height: 300px;
@@ -309,6 +431,86 @@ li {
 .hire-us .button__blue {
   margin: 32px 0 50px 0;
 }
+.hire-us .trustedby {
+  background-color: #f9fafe;
+  overflow: hidden;
+}
+.hire-us .trustedby__heading-title {
+  text-align: center;
+}
+.hire-us .trustedby__image-box {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.positions__container {
+  width: 100%;
+  height: 1130px;
+}
+.positions__cards-container {
+  width: 100%;
+  margin: 0 auto 16px auto;
+}
+.positions__card {
+  margin-bottom: 16px;
+  padding: 24px 16px;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0 16px 24px -16px rgba(0, 0, 0, 0.08), 0 8px 24px 0 rgba(0, 0, 0, 0.02);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.positions .button__blue--arrow {
+  width: 158px;
+}
+.positions .button__blue--black {
+  width: 257px;
+  background-color: black;
+  margin: 50px auto;
+}
+
+.gallery {
+  width: 100%;
+}
+.gallery__image {
+  width: 100%;
+}
+.gallery__image img {
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: rgba(17, 17, 26, 0.4) 0px 8px 24px, rgba(17, 17, 26, 0.2) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+}
+.gallery__image:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.experience {
+  width: 100%;
+}
+.experience__container {
+  width: 100%;
+  padding: 100px 0;
+}
+
+.info__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.info__text-box {
+  margin-bottom: 32px;
+}
+.info__title-secondary {
+  margin-bottom: 50px;
+  border: 1px solid red;
+}
+.info img {
+  width: 330px;
+}
 
 .navigation {
   flex: 0 1 30%;
@@ -357,40 +559,58 @@ li {
 .campanies {
   width: 100%;
   margin-top: 100px;
-  padding: 0 16px 0 16px;
 }
 
 .about {
   width: 100%;
   margin-top: 60px;
-  padding: 0 16px 0 16px;
 }
 
 .services {
   width: 100%;
   margin-top: 150px;
-  padding: 0 16px 0 16px;
   background-color: #f9fafe;
 }
 
 .blog {
   width: 100%;
   margin-top: 100px;
-  padding: 0 16px 0 16px;
 }
 
 .testimonials {
   width: 100%;
   margin-top: 50px;
-  padding: 0 16px 0 16px;
   background-color: #f9fafe;
 }
 
 .hire-us {
   width: 100%;
   margin-top: 50px;
-  padding: 0 16px 0 16px;
+}
+
+.positions {
+  width: 100%;
+  margin-top: 122px;
   background-color: #f9fafe;
+}
+
+.gallery {
+  width: 100%;
+  margin-top: 100px;
+}
+
+.experience {
+  width: 100%;
+  height: 704px;
+  margin-top: 76px;
+  background-image: linear-gradient(#317ade, #0e3378);
+}
+
+.info {
+  width: 100%;
+  height: 541px;
+  margin-top: 100px;
+  border: 1px solid pink;
 }
 
 /*# sourceMappingURL=style.css.map */
