--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,84 @@
-.footer{
+.footer {
+  width: 100%;
+  height: 1167px;  
+
+  &__container {
+    width: 100%;    
+    padding: 50px $padding-right 0 $padding-left;
+
+    width: 100%;
+    margin-top: 100px;
     background-color: $color-black;
-    color: $color-white;
+  }
+
+  &__logo-box {
+    width: 100%;
+    margin-bottom: 50px;
+    img {
+      height: 35px;
+    }
+  }
+
+  &__text-box {
+    margin-bottom: 48px;
+  }
+
+  &__social {
+    width: 100%;
+  }
+
+  &__list-social {
+    width: 100%;
+    margin-bottom: 50px;
+    border: 1px solid red;
+
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+  }
+
+  &__list-item {
+    width: 56px;
+    height: 56px;
+    border-radius: 20px;
+    background-color: $color-grey-dark;
+  }
+
+  &__link-social {
+    width: inherit;
+    height: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__heading-title {
+    margin-bottom: 24px;
+  }
+
+  &__navigation,
+  &__contact {
+    margin-bottom: 50px;
+  }
+
+  &__navigation-list,
+  &__contact-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+
+.footer {
+  &__bottom {
+    width: 100%;
+    height: 80px;
+    text-align: center;
+    border-top: 1px solid $color-grey-dark-1;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
