--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -120,7 +120,108 @@
 
   .button {
     &__blue {
-        margin: 32px 0 50px 0;
+      margin: 32px 0 50px 0;
     }
+  }
+
+  .trustedby {
+    background-color: $color-background-secondary;
+    overflow: hidden;
+
+    &__heading-title {
+      text-align: center;
+    }
+
+    &__image-box {
+      width: 100%;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+
+.positions {
+  &__container {
+    width: 100%;
+    height: 1130px;
+  }
+
+  &__cards-container {
+    width: 100%;
+    margin: 0 auto 16px auto;
+  }
+
+  &__card {
+    margin-bottom: 16px;
+    padding: 24px 16px;
+    background-color: $color_white;
+    border-radius: 12px;
+    box-shadow: 0 16px 24px -16px rgba(0, 0, 0, 0.08),
+      0 8px 24px 0 rgba(0, 0, 0, 0.02);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .button__blue--arrow {
+    width: 158px;
+  }
+
+  .button__blue--black {
+    width: 257px;
+    background-color: black;
+    margin: 50px auto;
+  }
+}
+
+.gallery {
+  width: 100%;
+
+  &__image {
+    width: 100%;
+
+    img {
+      width: 100%;
+      border-radius: 12px;
+      box-shadow: rgba(17, 17, 26, 0.4) 0px 8px 24px,
+        rgba(17, 17, 26, 0.2) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+    }
+    &:not(:last-child) {
+      margin-bottom: 40px;
+    }
+  }
+}
+
+.experience {
+  width: 100%;
+  &__container {
+    width: 100%;
+    padding: 100px 0;
+  }
+}
+
+.info{
+  &__container{
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__text-box{
+    margin-bottom: 32px;
+  }
+
+  &__title-secondary{
+    margin-bottom: 50px; 
+    border: 1px solid red;
+  }
+  
+  img{
+    width: 330px;
   }
 }
