--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,39 +2,58 @@
 
 .campanies{
     width: 100%;
-    margin-top: 100px;
-    padding: 0 $padding-right 0 $padding-left;
+    margin-top: 100px;    
 }
 
 .about{
     width: 100%;
-    margin-top: 60px;
-    padding: 0 $padding-right 0 $padding-left;
+    margin-top: 60px;    
 }
 
 .services{
     width: 100%;
-    margin-top: 150px;
-    padding: 0 $padding-right 0 $padding-left;
+    margin-top: 150px;    
     background-color: $color-background-secondary;
 }
 
 .blog{
     width: 100%;
-    margin-top: 100px;
-    padding: 0 $padding-right 0 $padding-left;
+    margin-top: 100px;    
 }
 
 .testimonials{
     width: 100%;
-    margin-top: 50px;
-    padding: 0 $padding-right 0 $padding-left;
+    margin-top: 50px;    
     background-color: $color-background-secondary;
 }
 
 .hire-us{
     width: 100%;
-    margin-top: 50px;
-    padding: 0 $padding-right 0 $padding-left;
+    margin-top: 50px;        
+}
+
+.positions{
+    width: 100%;
+    margin-top: 122px;    
     background-color: $color-background-secondary;
 }
+
+.gallery{
+    width: 100%;
+    margin-top: 100px;    
+}
+
+.experience{
+    width: 100%;
+    height: 704px;
+    margin-top: 76px;  
+    background-image: linear-gradient($color-blue, $color-background-secondary-tertiary-2);   
+}
+
+.info{
+    width: 100%;
+    height: 541px;
+    margin-top: 100px;
+    border: 1px solid pink;
+}
+
