--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -18,6 +18,8 @@ $color_lightgrey: #f5f5f5;
 $color_lightgrey-1: #f8f8f8;
 $color-grey-dark-1: rgba(255, 255, 255, 0.5);
 $color-grey-dark: rgba(255, 255, 255, 0.15);
+$color-grey-dark-2: #393939;
+
 
 //Font
 $default-font-size: 1rem;
@@ -34,5 +36,4 @@ $font-family-primary: futura-pt, "Arial Condensed", sans-serif;
 $font-family-secondary: lust, "Courier", serif;
 
 //
-$padding-left: 16px;
-$padding-right: 16px;
+$padding-lr: 16px;
