--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,10 +7,8 @@
 }
 
 html {
-  font-size: 62.5%;
-  /* 10px = 1rem
-       10/16=0.625
-    */
+  font-size: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -27,7 +25,7 @@ li {
 }
 
 main{
-  padding: 0 $padding-right 0 $padding-left;
+  //padding: 0 $padding-right 0 $padding-left;
 }
 
 li {
