--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -33,47 +33,51 @@ li {
 
 .button {
   color: $color-white;
+
+  &__blue{
+    font-size: 20px;
+    font-weight: bold;
+  }
 }
 
 .header {
   color: $color-white;
+}
 
-  .hero {
-    width: 100%;
-    height: 100%;
+.hero {
+  &__title {
+    @include font-primary-bold;
+    font-size: 48px;
+    font-weight: bold;
+    line-height: 1.25;
+    letter-spacing: -1px;
+    color: $color-white;
+  }
 
-    &__title {
-      @include font-primary-bold;
-      font-size: 48px;
-      font-weight: bold;
-      line-height: 1.25;
-      letter-spacing: -1px;
+  &__text {
+    margin: 32px 0;
+    color: $color-grey-dark-1;
+    font-size: 20px;
+    line-height: 1.6;
+  }
+
+  .button__header {
+    font-size: 24px;
+    font-weight: bold;
+    letter-spacing: -0.47px;
+
+    &--first {
+      color: $color-primary;
     }
 
-    &__text {
-      margin: 32px 0;
-      color: $color-grey-dark-1;
-      font-size: 20px;
-      line-height: 1.6;
-    }
-
-    .button__header {
-      font-size: 24px;
-      font-weight: bold;
-      letter-spacing: -0.47px;
-
-      &--quote {
-        color: $color-primary;
-      }
-
-      &--life {
-        color: $color-white;
-      }
+    &--second {
+      color: $color-white;
     }
   }
 }
 
 .services {
+  
   &__paragraph-text-light {
     color: $color-secondary-text-light-1;
     font-weight: 500;
@@ -81,7 +85,7 @@ li {
 
   .card {
     &__heading-subtitle-span {
-      font-size: 20px;
+      font-size: 16px;
       font-weight: bolder;
 
       &--blue {
@@ -98,7 +102,7 @@ li {
     }
 
     &__heading-title {
-      font-size: 32px;
+      font-size: 20px;
       font-weight: bolder;
       color: $color-primary;
     }
@@ -180,8 +184,7 @@ li {
 }
 
 .footer {
-  
-  &__heading-title{
+  &__heading-title {
     color: $color-white;
     font-size: 20px;
   }
@@ -189,7 +192,8 @@ li {
   p,
   a,
   ul,
-  li,span {
+  li,
+  span {
     color: $color-grey-dark-1;
   }
 
