--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,5 @@
-.button {
-  width: 100%;
-  height: 60px;
+.button {  
+  height: 50px;
   border-radius: 150px;
 
   display: flex;
@@ -8,7 +7,8 @@
   align-items: center;
 
   &__blue {
-    height: 50px;
+    padding: 12px 33px;    
     background-color: $color-blue;
+    border: none;
   }
 }
