--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,7 +4,7 @@
 
   &__container {
     width: 100%;    
-    padding: 50px $padding-right 0 $padding-left;
+    padding: 50px $padding-lr;
 
     width: 100%;
     margin-top: 100px;
