--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 }
 
 html {
-  font-size: 100%;
   scroll-behavior: smooth;
 }
 
@@ -37,32 +36,43 @@ p,
 a,
 ul,
 li {
-  font-size: 16px;
   font-family: futura-pt, "Arial Condensed", sans-serif;
   font-weight: 600;
   font-style: normal;
+  font-size: 16px;
   color: rgba(34, 37, 46, 0.8);
 }
 
 .paragraph-text {
-  color: rgba(34, 37, 46, 0.8);
+  line-height: 1.38;
+  font-weight: bolder;
 }
 
 .paragraph-text-light {
   color: #6b728e;
+  font-weight: bolder !important;
+}
+
+.paragraph-text-italic {
+  font-family: futura-pt, "Arial Condensed", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+  font-weight: bold;
+  color: #22252e;
 }
 
 .title-secondary {
   font-family: "Kurale", serif;
   font-style: italic;
   font-size: 48px;
-  font-weight: bolder;
+  font-weight: bold;
   font-style: italic;
   line-height: 1.25;
   color: #22252e;
 }
 
 .heading-title {
+  font-weight: bolder;
   color: #22252e;
 }
 
@@ -83,7 +93,7 @@ li {
   font-weight: 700;
   font-style: normal;
   font-size: 48px;
-  font-weight: bold;
+  font-weight: bolder;
   line-height: 1.25;
   letter-spacing: -1px;
   color: #fff;
@@ -92,11 +102,12 @@ li {
   margin: 32px 0;
   color: rgba(255, 255, 255, 0.5);
   font-size: 20px;
+  font-weight: bolder;
   line-height: 1.6;
 }
 .hero .button__header {
   font-size: 24px;
-  font-weight: bold;
+  font-weight: bolder;
   letter-spacing: -0.47px;
 }
 .hero .button__header--first {
@@ -144,8 +155,25 @@ li {
   color: #22252e;
 }
 
-.testimonials__text {
-  color: rgba(255, 255, 255, 0.5);
+.testimonials__paragraph-text-light,
+.testimonials .arrow-btn {
+  font-size: 20px;
+}
+.testimonials__paragraph-text-light {
+  padding-right: 50px;
+}
+.testimonials .arrow-btn--right {
+  color: #317ade;
+}
+.testimonials .carousel__heading-title {
+  font-size: 24px;
+}
+.testimonials .carousel__heading-subtitle {
+  color: #6b728e;
+  font-weight: bolder;
+}
+.testimonials .carousel__paragraph-text-italic {
+  font-size: 20px;
 }
 
 .hire-us .trustedby__heading-title {
@@ -461,6 +489,51 @@ li {
   margin: 0 7.3px 0 0;
 }
 
+.testimonials {
+  padding: 50px 16px;
+}
+.testimonials__title-secondary {
+  margin-bottom: 24px;
+}
+.testimonials__paragraph-text-light {
+  margin-bottom: 50px;
+}
+.testimonials__carousel {
+  width: 100%;
+}
+.testimonials .carousel__list {
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  gap: 20px;
+  margin-bottom: 32px;
+}
+.testimonials .carousel__list img {
+  width: 80px;
+  height: 80px;
+}
+.testimonials .carousel__list .active {
+  width: 129.6px;
+  height: 129.6px;
+}
+.testimonials .carousel__heading-subtitle {
+  margin-bottom: 32px;
+}
+.testimonials .carousel .buttons-box {
+  position: absolute;
+  top: 0;
+  right: 5%;
+  display: flex;
+  justify-content: flex-end;
+}
+.testimonials .arrow-btn {
+  width: 40px;
+  height: 32px;
+  border: none;
+  background-color: transparent;
+}
+
 .hire-us__title-secondary {
   margin-bottom: 32px;
 }
@@ -620,7 +693,6 @@ li {
 
 .testimonials {
   width: 100%;
-  margin-top: 50px;
   background-color: #f9fafe;
 }
 
