--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -196,6 +196,63 @@
   }
 }
 
+.testimonials {
+  padding: 50px 16px;
+
+  &__title-secondary {
+    margin-bottom: 24px;
+  }
+
+  &__paragraph-text-light {
+    margin-bottom: 50px;
+  }
+
+  &__carousel {
+    width: 100%;
+  }
+
+  .carousel {
+    &__list {
+      overflow: hidden;
+      position: relative;
+      display: flex;
+      align-items: flex-end;
+      gap: 20px;
+      margin-bottom: 32px;
+
+      img {
+        width: 80px;
+        height: 80px;
+      }
+
+      .active {
+        width: 129.6px;
+        height: 129.6px;
+      }
+    }
+
+    &__heading-subtitle {
+      margin-bottom: 32px;
+    }
+
+    .buttons-box {
+      position: absolute;
+      top: 0;
+      right: 5%;
+
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
+
+  .arrow-btn {
+    width: 40px;
+    height: 32px;
+    border: none;
+    background-color: transparent;
+  }
+}
+
 .hire-us {
   &__title-secondary {
     margin-bottom: 32px;
